--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-handlebars": "^3.1.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
     "uniqid": "^5.4.0"
   },
